# CStudy

CMakeStudy/step1/: CMakeLists.txt  demo.cpp  构建最小项目.md
CMakeStudy/step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
EasyXDemo/: EasyXDemo.sln
EasyXDemo/EasyXDemo/: EasyXDemo.vcxproj  main.cpp
NewC/C语言概述/: C语言概述.sln
VsCodeEnvironment/: hellocpp.cpp
VsCodeEnvironment/DataStruct/: memory.c
test/: test.sln
test/ApplyLis/: ApplyLis.vcxproj  ApplyLis.vcxproj.filters  CRC32.cpp  Checksum32.cpp  HashMethod.cpp  Lisence.cpp  MD5.cpp  MD5.h  main.cpp
test/Debug/: ApplyLis.ilk  Array.ilk  Function.ilk  LargerDemo.ilk  LearnC.ilk  MallocDemo.ilk  Pointer.ilk  PragrammStruct.ilk  ProdectData.ilk  RegTest.ilk  SecurityLib.exp  SecurityLib.ilk  SecurityLib.lib  String.ilk  TestDll.exp  TestDll.ilk  TestDll.lib  TestLib.lib  TestLibAndDll.ilk  testLib.h
test/Function/: 01.c  Function.vcxproj
test/LargerDemo/: LargerDemo.vcxproj  LargerDemo.vcxproj.filters  justify.c  line.c  line.h  word.c  word.h
test/LearnC/: 01.c  02.c  LearnC.vcxproj  LearnC.vcxproj.filters
test/MallocDemo/: MallocDemo.vcxproj  main.c
test/Pointer/: 01.c  Pointer.vcxproj
test/PragrammStruct/: 01.c  PragrammStruct.vcxproj
test/ProdectData/: ProdectData.vcxproj  ProdectData.vcxproj.filters  inventory.c  readLine.c  readLine.h
test/RegTest/: 01.c  RegTest.vcxproj
test/SecurityLib/: SecurityLib.vcxproj  SecurityLib.vcxproj.filters  main.c  security.c  security.h  systemInfo.c  systemInfo.h
test/String/: 01.c  String.vcxproj
test/TestCDll/: Program.cs  TestCDll.csproj
(+326 files in other folders)
